--- a/videos/62.md
+++ b/videos/62.md
@@ -35,42 +35,42 @@ tags:
 - C-RAM
 video_id: 0pK9u8nVE0I
 fragments:
-- start: '0:00'
+- start: '00:00'
   title: невиспана тиша
-  end: '0:44'
+  end: '00:44'
   start_seconds: 0
   end_seconds: 44
-- start: '0:44'
+- start: '00:44'
   title: початок
-  end: '1:27'
+  end: '01:27'
   start_seconds: 44
   end_seconds: 87
-- start: '1:27'
+- start: '01:27'
   title: як справи
-  end: '3:07'
+  end: '03:07'
   start_seconds: 87
   end_seconds: 187
-- start: '3:07'
+- start: '03:07'
   title: рсня відзвітувала про знищення недіючого корабля "Вінниця"
-  end: '4:58'
+  end: '04:58'
   start_seconds: 187
   end_seconds: 298
-- start: '4:58'
+- start: '04:58'
   title: 'Рєзніков: Гарпуни на береговій лінії'
-  end: '6:20'
+  end: '06:20'
   start_seconds: 298
   end_seconds: 380
-- start: '6:20'
+- start: '06:20'
   title: чи були спроби росіян знищити Гарпуни?
-  end: '7:48'
+  end: '07:48'
   start_seconds: 380
   end_seconds: 468
-- start: '7:48'
+- start: '07:48'
   title: оборонний контракт з Польщою на 600 мільйонів доларів
-  end: '9:53'
+  end: '09:53'
   start_seconds: 468
   end_seconds: 593
-- start: '9:53'
+- start: '09:53'
   title: наскільки риск пожеж влітку впливає на ведення бойових дій?
   end: '12:05'
   start_seconds: 593
@@ -106,7 +106,7 @@ fragments:
   start_seconds: 1138
   end_seconds: 1258
 - start: '20:58'
-  title: після поставки тренувальних HIMARS та M270 - чи будуть вони постачатись як
+  title: після поставки тренувальних HIMARS та M270 — чи будуть вони постачатись як
     треба? чи зможемо ми тоді наступати?
   end: '23:01'
   start_seconds: 1258
@@ -191,6 +191,9 @@ number_str: '62'
 short_title: "#62"
 short_date: 10 чер
 date: 10 червня
+previous:
+  number_str: '63'
+  title: "#63 Фронтова поплава"
 next:
   number_str: '61'
   title: "#61 Фронтова поплава"
