Оновлено до 68-ї, додано пошук через адресу

--- a/videos/63.md
+++ b/videos/63.md
@@ -255,6 +255,9 @@ number_str: '63'
 short_title: "#63"
 short_date: 13 чер
 date: 13 червня
+previous:
+  number_str: '64'
+  title: "#64 Фронтова поплава"
 next:
   number_str: '62'
   title: "#62 Фронтова поплава"
